# AB-IPC

./: README.md
A/: CMakeLists.txt
A/headers/: Sender.h
A/sources/: Sender.cpp  main.cpp
B/: CMakeLists.txt
B/headers/: ConsolePrinter.h  Server.hpp
B/sources/: ConsolePrinter.cpp  Server.cpp  main.cpp
